--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">   
+                <div class="contenedorMobile d-flex-row justify-content-around">
 
                     <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
@@ -39,7 +39,8 @@
                         <li><a href="index.html">INICIO</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/masa.html">MASA</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/recetas.html">RECETAS</a><span class="d-none d-lg-inline">|</span></li>
-                        <li><a href="pages/calculadora.html">CALCULADORA</a><span class="d-none d-lg-inline">|</span></li>
+                        <li><a href="pages/calculadora.html">CALCULADORA</a><span class="d-none d-lg-inline">|</span>
+                        </li>
                         <li><a href="pages/contacto.html">CONTACTO</a></li>
                     </ul>
                 </div>
@@ -52,7 +53,7 @@
 
 
     </header>
-<!-- 
+    <!-- 
     <main>
 
         <img class=" fotoPortada" src="imagenes/foto-portada.jpg" alt="pizza napolitana portada">
@@ -62,27 +63,27 @@
 
 
 
-    <!-- <footer>
+    <footer class="d-flex flex-column">
+
+        <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
+
+            <p class="seguinos text-center mb-2">¡SEGUINOS!</p>
+
+            <div class="text-center">
+                <a class="redes" target="_blank" href="https://web.whatsapp.com/"><img class="redSocial"
+                        src="imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
+                <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
+                        src="imagenes/bxl-instagram.svg" alt="boton instagram"></a>
+                <a class="redes" target="_blank" href="https://www.facebook.com/"><img class="redSocial"
+                        src="imagenes/bxl-facebook-circle.svg" alt="boton facebook"></a>
+            </div>
 
 
-
-        <div class="contenedorRedes">
-
-            <p class="seguinos">¡SEGUINOS!</p>
-
-            <a class="redes" target="_blank" href="https://web.whatsapp.com/"><img class="redSocial"
-                    src="imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
-            <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
-                    src="imagenes/bxl-instagram.svg" alt="boton instagram"></a>
-            <a class="redes" target="_blank" href="https://www.facebook.com/"><img class="redSocial"
-                    src="imagenes/bxl-facebook-circle.svg" alt="boton facebook"></a>
         </div>
 
-        <p class="derechos">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
+        <p class="derechos container-fluid p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
 
-
-
-    </footer> -->
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
