--- a/pages/masa.html
+++ b/pages/masa.html
@@ -189,25 +189,25 @@
 
 
 
-    <footer>
+    <footer class="d-flex flex-column">
+
+        <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
+
+            <p class="seguinos text-center mb-2">¡SEGUINOS!</p>
+
+            <div class="text-center">
+                <a class="redes" target="_blank" href="https://web.whatsapp.com/"><img class="redSocial"
+                        src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
+                <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
+                        src="../imagenes/bxl-instagram.svg" alt="boton instagram"></a>
+                <a class="redes" target="_blank" href="https://www.facebook.com/"><img class="redSocial"
+                        src="../imagenes/bxl-facebook-circle.svg" alt="boton facebook"></a>
+            </div>
 
 
-
-        <div class="contenedorRedes">
-
-            <p class="seguinos">¡SEGUINOS!</p>
-
-            <a class="redes" target="_blank" href="https://web.whatsapp.com/"><img class="redSocial"
-                    src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
-            <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
-                    src="../imagenes/bxl-instagram.svg" alt="boton instagram"></a>
-            <a class="redes" target="_blank" href="https://www.facebook.com/"><img class="redSocial"
-                    src="../imagenes/bxl-facebook-circle.svg" alt="boton facebook"></a>
         </div>
 
-        <p class="derechos">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
-
-
+        <p class="derechos container-fluid p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
