Se trabajó en el index con la foto de portada con responsive

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
 
     </header>
-    <!-- 
+    
     <main>
 
-        <img class=" fotoPortada" src="imagenes/foto-portada.jpg" alt="pizza napolitana portada">
+        <img class="img-fluid rounded-4 m-4" src="imagenes/foto-portada.jpg" alt="pizza napolitana portada">
         <a href="pages/masa.html">¡COMENZAR!</a>
 
-    </main> -->
+    </main>
 
 
 
