Se modificó el botón COMENZAR con una animación para que quede mejor en vista Mobile

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
 
 
     </header>
-    
-    <main>
 
-        <img class="img-fluid rounded-4 m-4" src="imagenes/foto-portada.jpg" alt="pizza napolitana portada">
+    
+    <main class="container">
+
+        <img class="img-fluid rounded-4 mb-4" src="imagenes/foto-portada.jpg" alt="pizza napolitana portada">
         <a href="pages/masa.html">¡COMENZAR!</a>
 
     </main>
