Se completó la seccion masa con responsive bootstrap, se avanza ahora con secccion recetas

--- a/pages/masa.html
+++ b/pages/masa.html
@@ -53,56 +53,56 @@
         <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
 
-    <section>
-        <div class="masaContenedor">
+    <section class="container mb-2">
+        <div class="row mt-2 p-0 m-0 container-fluid">
 
-            <div class="masa1">
+            <div class="col-lg-6 col-sm-12 pt-2 m-0 pe-0 bg-secondary-subtle">
                 <h3>Masa</h3>
                 <p>Al momento de preparar la masa para pizza napolitana es muy importante tener en claro que, si bien
                     los ingredientes son pocos, la exactitud en la técnica y la calidad de los mismos es <span
                         class="pNegrita">CLAVE</span> para que la masa salga perfecta.</p>
             </div>
 
-            <div class="masa1Imagen">
-                <img class="imagenMasa1" src="../imagenes/masa/masa-1.jpg" alt="Mano amasando y estirando pizza">
+            <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid">
+                <img class="img-fluid" src="../imagenes/masa/masa-1.jpg" alt="Mano amasando y estirando pizza">
             </div>
         </div>
 
-        <div class="masaContenedor2">
+        <div class="row container-fluid m-0 p-0">
 
-            <div class="masa2Imagen">
-                <img class="imagenMasa2" src="../imagenes/masa/ingredientes.jpeg"
+            <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid">
+                <img class="img-fluid" src="../imagenes/masa/ingredientes.jpeg"
                     alt="ingredientes vistos desde arriba para pizza">
             </div>
 
-            <div class="masa2">
+            <div class="col-lg-6 col-sm-12 pt-3 bg-secondary-subtle container-fluid">
                 <h3>Ingredientes</h3>
                 <p>A continuación detallamos los ingredientes que necesitaremos para realizar 5 PIZZAS de 340 gramos que
                     es el estandar recomendado y fácil de calcular:</p><br>
 
-                <ul>
-                    <li><img class="iconoPizza" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">1 KG DE HARINA DE
+                <ul class="listaIngredientes">
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">1 KG DE HARINA DE
                         FUERZA</li>
-                    <li><img class="iconoPizza" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">700 gr DE AGUA
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">700 gr DE AGUA
                     </li>
-                    <li><img class="iconoPizza" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 gr DE LEVADURA
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 gr DE LEVADURA
                         SECA</li>
-                    <li><img class="iconoPizza" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 gr DE MIEL (O
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 gr DE MIEL (O
                         EXTRACTO DE
                         MALTA)
                     </li>
-                    <li><img class="iconoPizza" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">24 gr DE SAL</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">24 gr DE SAL</li>
                 </ul>
             </div>
 
         </div>
 
-        <div class="contenedorSubtitulo">
-            <h2>PROCEDIMIENTO</h2>
+        <div class="container-fluid mt-2 pt-2 subtituloSeccion">
+            <h2 class="text-center">PROCEDIMIENTO</h2>
         </div>
 
-        <div class="procedimientoMasaContenedor">
-            <div class="procedimientoMasa1">
+        <div class="row m-0 p-0 container-fluid">
+            <div class="col-lg-6 col-sm-12 pt-2 bg-secondary-subtle">
                 <h3>72 Horas Antes</h3>
                 <h4>Poolish</h4>
 
@@ -118,13 +118,13 @@
                     <li>Luego lo llevamos a la heladera por 24 horas.</li>
                 </ol>
             </div>
-            <div class="procedimientoMasaImagen1">
-                <img class="imagenProcedimiento1" src="../imagenes/masa/poolish.webp" alt="espatula haciendo el poolish vista de arriba">
+            <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid d-flex align-items-stretch">
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/poolish.webp" alt="espatula haciendo el poolish vista de arriba">
             </div>
         </div>
 
-        <div class="48horasAntesContenedor">
-            <div>
+        <div class="row m-0 p-0 container-fluid">
+            <div class="col-lg-6 col-sm-12 pt-2 m-0">
                 <h3>48 Horas Antes</h3>
                 <h4>Amasado</h4>
 
@@ -147,21 +147,22 @@
                         para
                         que termine de formar el gluten y luego sea mas facil realizar el siguiente paso.</li>
 
-                    <li>Luego terminamos el proceso realizando nuestro <p>AMASADO FRANCÉS (VER VIDEO)</p> y lo
+                    <li>Luego terminamos el proceso realizando nuestro <span class="pNegrita">AMASADO FRANCÉS (VER VIDEO)</span> y lo
                         llevamos
                         a un bowl previamente aceitado con un film por 48 horas a la heladera.</li>
 
                 </ol>
             </div>
 
-            <div>
-                <img src="../imagenes/masa/amasar-pan.jpg" alt="Mano amasando con fuerza">
-                <img src="../imagenes/masa/imagen-video.png" alt="Video explicando amasado frances">
+            <div class="col-lg-6 col-sm-12 pt-2 p-0 m-0">
+                <img class="img-fluid" src="../imagenes/masa/amasar-pan.jpg" alt="Mano amasando con fuerza">
+                <iframe class="ratio" width="560" height="315" src="https://www.youtube.com/embed/uen6X7nRjug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
             </div>
         </div>
-        <div class="llegoElDiaContenedor">
-            <div>
+
+        <div class="row m-0 p-0 container-fluid">
+            <div class="col-lg-6 col-sm-12 bg-secondary-subtle p-2 m-0">
                 <h3>¡Llego el Día!</h3>
                 <h4>Armado de Bollos</h4>
 
@@ -179,8 +180,8 @@
                 </p>
 
             </div>
-            <div>
-                <img src="../imagenes/masa/bollo-masa.jpg" alt="mano dando forma de bollo tipo guillotina">
+            <div class="col-lg-6 col-sm-12 p-0 m-0 d-flex align-items-stretch">
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/bollo-masa.jpg" alt="mano dando forma de bollo tipo guillotina">
 
             </div>
         </div>
