Se organizó en diferentes hojas scss el estilo de la web utilizando algunas variables

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p class="seguinos text-center mb-2">¡SEGUINOS!</p>
 
             <div class="text-center">
-                <a class="redes" target="_blank" href="https://web.whatsapp.com/"><img class="redSocial"
+                <a class="redes" target="_blank" href="https://api.whatsapp.com/send?phone=+5493515921209&text=Hola,%20v%C3%AD%20tu%20pagina%20de%20Pizza%20Fan!..."><img class="redSocial"
                         src="imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
                 <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
                         src="imagenes/bxl-instagram.svg" alt="boton instagram"></a>
