Se completó seccion Recetas con diseño responsive

--- a/pages/masa.html
+++ b/pages/masa.html
@@ -7,7 +7,8 @@
     <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana - Masa</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- CSS NORMALIZADOR -->
     <link rel="stylesheet" href="../css/normalize.css">
     <!-- CSS -->
@@ -20,7 +21,7 @@
 
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">   
+                <div class="contenedorMobile d-flex-row justify-content-around">
 
                     <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
@@ -54,6 +55,7 @@
     </main>
 
     <section class="container mb-2">
+        
         <div class="row mt-2 p-0 m-0 container-fluid">
 
             <div class="col-lg-6 col-sm-12 pt-2 m-0 pe-0 bg-secondary-subtle">
@@ -97,9 +99,7 @@
 
         </div>
 
-        <div class="container-fluid mt-2 pt-2 subtituloSeccion">
-            <h2 class="text-center">PROCEDIMIENTO</h2>
-        </div>
+        <h2 class="container-fluid mt-2 mb-2 pt-2 pb-2 subtituloSeccion text-center">PROCEDIMIENTO</h2>
 
         <div class="row m-0 p-0 container-fluid">
             <div class="col-lg-6 col-sm-12 pt-2 bg-secondary-subtle">
@@ -119,7 +119,8 @@
                 </ol>
             </div>
             <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/masa/poolish.webp" alt="espatula haciendo el poolish vista de arriba">
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/poolish.webp"
+                    alt="espatula haciendo el poolish vista de arriba">
             </div>
         </div>
 
@@ -147,7 +148,8 @@
                         para
                         que termine de formar el gluten y luego sea mas facil realizar el siguiente paso.</li>
 
-                    <li>Luego terminamos el proceso realizando nuestro <span class="pNegrita">AMASADO FRANCÉS (VER VIDEO)</span> y lo
+                    <li>Luego terminamos el proceso realizando nuestro <span class="pNegrita">AMASADO FRANCÉS (VER
+                            VIDEO)</span> y lo
                         llevamos
                         a un bowl previamente aceitado con un film por 48 horas a la heladera.</li>
 
@@ -156,7 +158,10 @@
 
             <div class="col-lg-6 col-sm-12 pt-2 p-0 m-0">
                 <img class="img-fluid" src="../imagenes/masa/amasar-pan.jpg" alt="Mano amasando con fuerza">
-                <iframe class="ratio" width="560" height="315" src="https://www.youtube.com/embed/uen6X7nRjug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="ratio" width="560" height="315" src="https://www.youtube.com/embed/uen6X7nRjug"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
 
             </div>
         </div>
@@ -181,7 +186,8 @@
 
             </div>
             <div class="col-lg-6 col-sm-12 p-0 m-0 d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/masa/bollo-masa.jpg" alt="mano dando forma de bollo tipo guillotina">
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/bollo-masa.jpg"
+                    alt="mano dando forma de bollo tipo guillotina">
 
             </div>
         </div>
@@ -211,8 +217,10 @@
         <p class="derechos container-fluid p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
