--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -7,7 +7,8 @@
     <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana - Recetas</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- CSS NORMALIZADOR -->
     <link rel="stylesheet" href="../css/normalize.css">
     <!-- CSS -->
@@ -20,7 +21,7 @@
 
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">   
+                <div class="contenedorMobile d-flex-row justify-content-around">
 
                     <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
@@ -53,50 +54,53 @@
         <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
 
-    <section>
+    <section class="container mb-2">
 
-        <h2>RECETAS</h2>
+        <h2 class="container text-center subtituloSeccion pt-2 pb-2">RECETAS</h2>
 
-        <div class="tecnicaDeEstiradoContenedor">
 
-            <div>
-                <div>
-                    <h3>TÉCNICA DE ESTIRADO</h3>
-                    <h4>EL SECRETO PARA TU PIZZA CON BORDES AIREADOS</h4>
+        <div class="row mt-2 p-0 m-0 container-fluid">
 
-                    <p>Esas 72 benditas horas previas al armado de la pizza no tendrán sentido si no estiras
-                        correctamente la masa. A continuación proveemos un video que explica como se realiza de
-                        manera correcta desde el
-                    <p>CENTRO HACIA AFUERA.</p>
-                    </p>
-                </div>
+            <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
 
-                <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pfYpUNziVOQ"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                </div>
+                <h3>TÉCNICA DE ESTIRADO</h3>
+
+                <h4>EL SECRETO PARA TU PIZZA CON BORDES AIREADOS</h4>
+
+                <p>Esas 72 benditas horas previas al armado de la pizza no tendrán sentido si no estiras
+                    correctamente la masa. A continuación proveemos un video que explica como se realiza de
+                    manera correcta desde el
+                    <span class="pNegrita">CENTRO HACIA AFUERA.</span>
+                </p>
+
+                <iframe class="container-fluid" width="360" height="315" src="https://www.youtube.com/embed/pfYpUNziVOQ"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+
             </div>
 
-            <div>
-                <img src="../imagenes/recetas/estirado-masa.jpeg" alt="Procedimiento de Estirado de Masa">
+
+            <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
+                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/estirado-masa.jpeg"
+                    alt="Procedimiento de Estirado de Masa">
             </div>
 
         </div>
 
-        <div class="salsaParaPizzaContenedor">
 
-            <div>
+        <div class="row mt-2 p-0 m-0 container-fluid">
+
+            <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0">
                 <h3>SALSA PARA PIZZA</h3>
                 <h4>INGREDIENTES</h4>
 
-                <ul>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">1 LATA DE TOMATE PERITA</li>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">CHORRITO DE ACEITE DE OLIVA
+                <ul class="listaIngredientes mb-2">
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">1 LATA DE TOMATE PERITA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">CHORRITO DE ACEITE DE OLIVA
                     </li>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">5 gr SAL</li>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">3 HOJAS DE ALBAHACA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">5 gr SAL</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">3 HOJAS DE ALBAHACA</li>
                 </ul>
 
                 <p>A continuación vamos a enseñarte como realizar la salsa tradicional italiana para el estilo
@@ -114,15 +118,16 @@
             </div>
 
 
-            <div>
-                <img src="../imagenes/recetas/salsa-pizza.webp" alt="Pizza vista desde arriba con salsa">
+            <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
+                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/salsa-pizza.webp" alt="Pizza vista desde arriba con salsa">
 
             </div>
 
-        </div>
+        
 
-        <div class="pizzaMargaritaContenedor">
-            <div>
+        <div class="row mt-2 p-0 m-0 container-fluid">
+
+            <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
                 <h3>PIZZA MARGARITA</h3>
                 <h4>INGREDIENTES</h4>
 
@@ -161,8 +166,8 @@
 
             </div>
 
-            <div>
-                <img src="../imagenes/recetas/pizza-margarita-1.jpg" alt="Pizza Margarita">
+            <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
+                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/pizza-margarita-1.jpg" alt="Pizza Margarita">
             </div>
 
 
@@ -194,7 +199,9 @@
 
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
