--- a/pages/masa.html
+++ b/pages/masa.html
@@ -55,7 +55,7 @@
     </main>
 
     <section class="container mb-2">
-        
+
         <div class="row mt-2 p-0 m-0 container-fluid">
 
             <div class="col-lg-6 col-sm-12 pt-2 m-0 pe-0 bg-secondary-subtle">
@@ -203,7 +203,7 @@
             <p class="seguinos text-center mb-2">¡SEGUINOS!</p>
 
             <div class="text-center">
-                <a class="redes" target="_blank" href="https://web.whatsapp.com/"><img class="redSocial"
+                <a class="redes" target="_blank" href="https://api.whatsapp.com/send?phone=+5493515921209&text=Hola,%20v%C3%AD%20tu%20pagina%20de%20Pizza%20Fan!..."><img class="redSocial"
                         src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
                 <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
                         src="../imagenes/bxl-instagram.svg" alt="boton instagram"></a>
