se modificó detalles de codigo html mal redactado

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -131,12 +131,12 @@
                 <h3>PIZZA MARGARITA</h3>
                 <h4>INGREDIENTES</h4>
 
-                <ul>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">150 gr QUESO MOZZARELLA</li>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">100 gr SALSA</li>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">20 gr QUESO PARMESANO RALLADO.
+                <ul class="listaIngredientes mb-2">
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">150 gr QUESO MOZZARELLA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">100 gr SALSA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">20 gr QUESO PARMESANO RALLADO.
                     </li>
-                    <li><img src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 HOJAS DE ALBAHACA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 HOJAS DE ALBAHACA</li>
                 </ul>
 
                 <p>Esta es la receta CLÁSICA de Italia. La pizza más famosa del país. Su simpleza y sabor cautiva al
@@ -156,10 +156,10 @@
 
                 <p>Para horno común se recomienda usar una placa de horno y poner primero SOLAMENTE la masa y la
                     salsa. Luego que comienza a burbujear la salsa quiere decir que nuestra masa está casi lista.
-                </p><br>
+                </p>
 
-                <p></p>En ese momento la retiramos, agregamos el queso y dejamos que siga unos minutos más hasta que
-                el queso se derrita.</p><br>
+                <p>En ese momento la retiramos, agregamos el queso y dejamos que siga unos minutos más hasta que
+                el queso se derrita.</p>
 
                 <p>También podemos pintar los bordes de nuestra masa con aceite de oliva para que queden más dorados
                 </p>
