Se corrigió errores del tutor y se avanzó con calculadora.html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
 <body>
     <header>
+        <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">
-
-                    <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
+                <div class="d-flex flex-column text-center">   
+<!-- MENU HAMBURGESA MOBILE -->
+                    <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -30,17 +31,16 @@
                     </button>
                 </div>
 
-                <a class="navbar-brand" href="index.html">
-                    <img class="logo" src="imagenes/logo.png" alt="Logo Pizza Fan">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="logo" src="../imagenes/logo.png" alt="Logo Pizza Fan">
                 </a>
 
                 <div class="flex-row justify-content-evenly collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav">
-                        <li><a href="index.html">INICIO</a><span class="d-none d-lg-inline">|</span></li>
+                        <li><a href="../index.html">INICIO</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/masa.html">MASA</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/recetas.html">RECETAS</a><span class="d-none d-lg-inline">|</span></li>
-                        <li><a href="pages/calculadora.html">CALCULADORA</a><span class="d-none d-lg-inline">|</span>
-                        </li>
+                        <li><a href="pages/calculadora.html">CALCULADORA</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/contacto.html">CONTACTO</a></li>
                     </ul>
                 </div>
