--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,9 +20,9 @@
 
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">   
+                <div class="d-flex flex-column text-center">   
 
-                    <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
+                    <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
