--- a/pages/masa.html
+++ b/pages/masa.html
@@ -21,9 +21,9 @@
 
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">
+                <div class="d-flex flex-column text-center">   
 
-                    <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
+                    <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
             <div class="col-lg-6 col-sm-12 pt-3 bg-secondary-subtle container-fluid">
                 <h3>Ingredientes</h3>
                 <p>A continuación detallamos los ingredientes que necesitaremos para realizar 5 PIZZAS de 340 gramos que
-                    es el estandar recomendado y fácil de calcular:</p><br>
+                    es el estandar recomendado y fácil de calcular:</p>
 
                 <ul class="listaIngredientes">
                     <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">1 KG DE HARINA DE
@@ -107,7 +107,7 @@
                 <h4>Poolish</h4>
 
                 <p>Para comenzar vamos a utilizar un PRE-FERMENTO como el título indica llamado poolish. El mismo se
-                    trata de una técnica para darle más sabor a la masa.</p><br>
+                    trata de una técnica para darle más sabor a la masa.</p>
 
                 <ol>
                     <li>Mezclamos en un bowl 300 gr de harina de fuerza con 300 gr de agua, la levadura seca y la
