--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -21,9 +21,9 @@
 
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="contenedorMobile d-flex-row justify-content-around">
+                <div class="d-flex flex-column text-center">   
 
-                    <h3 class="fuenteMenuIconoMobile navbar-toggler ps-1">MENÚ</h3>
+                    <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -104,8 +104,7 @@
                 </ul>
 
                 <p>A continuación vamos a enseñarte como realizar la salsa tradicional italiana para el estilo
-                    NAPOLITANO.<br>
-                    Es una salsa muy simple pero ahí esta el secreto. </p>
+                    NAPOLITANO. Es una salsa muy simple pero ahí esta el secreto. </p>
 
                 <h4>PROCEDIMIENTO</h4>
 
