Se corrgio portada en mobile responsive

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
     <!-- PORTADA PRINCIPAL -->
     <main class="container-fluid">
         
-        <div class=" text-center">
+        <div class=" text-center m-0 p-0">
             <h1 class="display-4 fw-bold tituloPrincipal">La Vera Pizza Napoletana</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu casa y
                     seguí nuestra pasión por la pizza estilo napolitano.</p>
             </div>
-            <div class="overflow-hidden" style="max-height: 50vh;">
+            <div class="overflow-hidden m-0 p-0" style="max-height: 40vh;">
                 
                 <div class="container position-relative">
-                    <img src="imagenes/foto-portada.jpg" class="img-fluid border rounded-3 shadow-lg mb-4"
+                    <img src="imagenes/foto-portada.jpg" class="img-fluid rounded-top-3 shadow-lg"
                         alt="foto pizza napolitana margarita" width="700" height="500" loading="lazy">
                     <a class="botonComenzar position-absolute top-50 start-50 translate-middle"
                         href="pages/masa.html">¡COMENZAR!</a>
@@ -81,7 +81,7 @@
 
 
     <!-- FOOTER -->
-    <footer class="d-flex flex-column">
+    <footer class="d-flex flex-column mt-0 pt-0">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
 
